[package]
name = "dir_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["full", "rt-multi-thread"] }
shellexpand = "3.1"
